css/app.css
html {
    box-sizing: border-box;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

body {
    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
    font-family: 'Coda', cursive;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

h1 {
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
    text-transform: uppercase;
}

/*
 * Styles for the deck of cards
 */

.deck {
    width: 650px;
    min-height: 650px;
    background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
    padding: 32px;
    border-radius: 10px;
    box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    margin: 0 0 3em;
}

.deck .card {
    height: 125px;
    width: 125px;
    background: #2e3d49;
    font-size: 0;
    color: #ffffff;
    border-radius: 8px;
    cursor: pointer;
    display: flex;
    justify-content: center;
    align-items: center;
    box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
    /* this is set to fix an issue with restart-icon__holder*/
    z-index: 1;
}

.deck .card.open {
    transform: rotateY(0);
    background: #02b3e4;
    cursor: default;
}

.deck .card.show {
    font-size: 33px;
}

.deck .card.match {
    cursor: default;
    background: #02ccba;
    font-size: 33px;
}

/*
 * Styles for the Score Panel
 */

.score-panel {
    text-align: left;
    width: 345px;
    margin-bottom: -15px;
}

.score-panel .stars {
    margin: 0;
    padding: 0;
    display: inline-block;
    margin: 0 5px 0 0;
}

.score-panel .stars li {
    list-style: none;
    display: inline-block;
}

.score-panel .restart-icon__holder {
    float: right;
    cursor: pointer;
    /* those edits is for making the icon more clickable*/
    width: 48px;
    height: 48px;
    /* PS: i learned this from udacity responsive lesson :) */
    display: flex;
    justify-content: center;
}

.score-panel .restart-icon__holder i {
  margin-top: 4px;
}

/* win game message section  */

#win-message-section {
  opacity: 0;
  visibility: hidden;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background: #fff;
  transition: opacity 0.2s ease-in;
}

#win-message-section .txt-holder {
  text-align: center;
  color: #6c6c6c;
  margin-bottom: 1em;
}

#win-message-section .txt-holder .txt {
  margin: 0;
}

#win-message-section .play-again__botton {
  background: #02ccba;
  color: #fff;
  font-size: 16px;
  font-weight: bold;
  border-radius: 5px;
  padding: 5px 20px;
  cursor: pointer;
}

/* end of win the game message section */

